--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.0",
     "astro-icon": "^1.1.0",
+    "astro-particles": "^2.10.0",
     "gsap": "^3.12.5",
     "puppeteer": "^22.13.1",
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
+    "tsparticles": "^3.5.0",
+    "tsparticles-engine": "^2.12.0",
     "typescript": "^5.5.2"
   }
 }
