--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "": "file:",
     "@astrojs/check": "^0.7.0",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/tailwind": "^5.1.0",
@@ -18,6 +19,7 @@
     "astro-icon": "^1.1.0",
     "astro-particles": "^2.10.0",
     "gsap": "^3.12.5",
+    "nodemailer": "^6.9.14",
     "puppeteer": "^22.13.1",
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
