--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@formspree/react": "^2.5.1",
     "@iconify-json/mdi": "^1.1.67",
     "astro": "^4.15.4",
     "astro-icon": "^1.1.0",
