--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
   "dependencies": {
     "": "file:",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/react": "^4.0.0",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/tailwind": "^5.1.0",
     "@formspree/react": "^2.5.1",
     "@iconify-json/mdi": "^1.1.67",
+    "@tsparticles/basic": "^3.7.1",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/slim": "^3.7.1",
     "astro": "^4.15.4",
     "astro-icon": "^1.1.0",
     "astro-particles": "^2.10.0",
     "gsap": "^3.12.5",
     "nodemailer": "^6.9.14",
     "puppeteer": "^22.13.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
-    "tsparticles": "^3.5.0",
-    "tsparticles-engine": "^2.12.0",
     "typescript": "^5.5.2"
   }
 }
